Bug fix, leak fix and removal of some unused resources

--- a/app/src/main/res/layout/fragment_fragment_true_false.xml
+++ b/app/src/main/res/layout/fragment_fragment_true_false.xml
@@ -27,12 +27,12 @@
         <RadioButton
             android:id="@+id/radioBtn1"
             style="@style/radio_button_answer"
-            android:text="Option 1" />
+            tools:text="Option 1" />
 
         <RadioButton
             android:id="@+id/radioBtn2"
             style="@style/radio_button_answer"
-            android:text="Option 2" />
+            tools:text="Option 2" />
 
 
     </LinearLayout>
